--- a/api/build.gradle
+++ b/api/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.code.gson:gson:2.3'
     compile project(':model')
+    compile 'com.zhy:okhttputils:2.6.2'
 }
